[package]
name = "subtask_hook"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_builder = { version = "0.12.0", features = ["clippy"] }
once_cell = "1.18.0"
regex = "1.8.4"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
task-hookrs = "0.9.0"
uuid = { version = "1.4.0", features = ["v4", "macro-diagnostics", "serde"] }
